# mede

./: .gitignore  Cargo.toml  Dioxus.toml  README.md
assets/: main.css
src/: build.rs  downloader.rs  main.rs
